--- a/index.html
+++ b/index.html
@@ -44,31 +44,23 @@
    </div>
    <!-- end header -->
    <div class="container">
-    <!-- catalog -->
-    <div class="catalog">
-        <h2>Каталог</h2>
-        <div class="card">
-            <h2>Габриэль Агрест</h2> 
-            <img src="media/Фото-контент/Фото/Габриэль Агрест.jpg" alt="">
-            <div class="opacity"></div>           
-        </div>
-        <div class="card">
-            <h2>Натали Санкёр</h2> 
-            <img src="media/Фото-контент/Фото/Натали Санкёр.jpg" alt="">
-            <div class="opacity"></div>            
-        </div>
-        <div class="card">
-            <h2>Бражник</h2>
-            <img src="media/Фото-контент/Фото/Бражник.jpg" alt="">
-            <div class="opacity"></div>             
-        </div>
-        <div class="card">
-            <h2>Маюра</h2>   
-            <img src="media/Фото-контент/Фото/Маюра.jpg" alt="">
-            <div class="opacity"></div>          
-        </div>
+    <!-- kodfun-galeri -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="kodfun-galeri">
+        <div style="background-image: url('media/Фото-контент/Фото/Габриэль\ Агрест.jpg');"></div>
+        <div style="background-image: url('media/Фото-контент/Фото/Натали\ Санкёр.jpg');"></div>
+        <div style="background-image: url('media/Фото-контент/Фото/Бражник.jpg');"></div>
+        <div style="background-image: url('media/Фото-контент/Фото/Маюра.jpg');"></div>
+        <div style="background-image: url('media/Фото-контент/Фото/Катализатор.jpg');"></div>
+        <div style="background-image: url('media/Фото-контент/Фото/Монарх.jpg');"></div>
+        <div style="background-image: url('media/Фото-контент/Фото/Сафари.jpg');"></div>
     </div>
    </div>
+   
 </body>
 </html>
 
