--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
         <div style="background-image: url('media/Фото-контент/Фото/Монарх.jpg');"></div>
         <div style="background-image: url('media/Фото-контент/Фото/Сафари.jpg');"></div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="feedback">
+        
+    <div class="form-feedback"> 
+        <form>
+            <label>Имя</label>  <br>
+            <input type="text"> <br>
+            <label>Е-mail</label> <br>
+            <input type="email"> <br> <br>
+            <input type="submit">
+        </form>
+    </div>
+    
+       <div class="opacity"></div>
+    </div>
    </div>
    
 </body>
